Add creating of music URL