@@ -1,15 +1,20 @@
 import edu.cmu.sphinx.api.Configuration;
 import edu.cmu.sphinx.api.SpeechAligner;
+import edu.cmu.sphinx.result.WordResult;
 
+import java.io.File;
 import java.io.IOException;
 import java.net.MalformedURLException;
 import java.net.URL;
+import java.nio.file.Files;
+import java.nio.file.Paths;
+import java.util.List;
 
 /**
  * Created by Dmitry Tishchenko on 05.05.15.
  */
 public class Main {
-    public static void main(String[] args) {
+    public static void main(String[] args) throws IOException {
 
         Configuration configuration = new Configuration();
 
@@ -23,9 +28,12 @@ public class Main {
         // Set language model.
         configuration.setLanguageModelPath("resource:/edu/cmu/sphinx/models/en-us/en-us.lm.dmp");
 
+        String transcript = String.join(System.lineSeparator(), Files.readAllLines(Paths.get(scriptPath)));
+
         try {
             SpeechAligner aligner = new SpeechAligner(amPath, dictPath, null);
-            aligner.align(new URL(audioPath), "one oh one four two");
+            URL audioUrl = new File(audioPath).toURI().toURL();
+            List<WordResult> wordResult = aligner.align(audioUrl, transcript);
         } catch(IOException e) {
             System.out.print(e.getMessage());
         }
